# pulse

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: database.py  main.py  models.py  test_main.py
api/alembic/: env.py
api/alembic/versions/: 1bf1f25aab34_fix_fk_between_event_and_tenant.py  3b6455dcb73f_fix_back_populates_for_daily_aggregates.py  77dcfeca03e7_populate_event_type.py  c99aa2071c21_initial_migration.py  e68ab7761d66_adding_tenant_event_eventtype_apikey_.py
core/: config.py  database.py  deps.py  models.py  services.py  sharding.py
docs/: observability.md
k8s/: api-deployment.yaml  api-service.yaml  bootstrap-job.yaml  configmap.yaml  migrate-job.yaml  postgres-shard0-deployment.yaml  postgres-shard0-pvc.yaml  postgres-shard0-service.yaml  postgres-shard1-deployment.yaml  postgres-shard1-pvc.yaml  postgres-shard1-service.yaml  redis-deployment.yaml  redis-service.yaml  secret.yaml  worker-deployment.yaml
prometheus/config/: prometheus.yml
results/: .~lock.api_baseline.csv#  api_baseline.csv  api_baseline_celery_scale.csv  api_baseline_increased_db_ppol.csv  api_baseline_remove_celery.csv
scripts/: bootstrap.py  check_tenant_summary.py  generate_events.py  load_events.py
worker/: app.py  tasks.py
